--- a/package.json
+++ b/package.json
@@ -1,12 +1,20 @@
 {
-  "name": "notion-page-to-html",
-  "version": "1.2.0",
+  "name": "@routex-hq/notion-page-to-html",
+  "version": "1.2.0-build.0",
   "description": "It converts public notion pages to html from url",
   "main": "dist/index.js",
+  "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "require": "./dist/index.js",
+      "import": "./dist/index.mjs",
+      "default": "./dist/index.js"
+    }
+  },
   "scripts": {
-    "prebuild": "rm -rf ./dist",
-    "build": "tsc -p tsconfig.build.json",
+    "build": "tsup",
     "lint": "eslint '*/**/*.{js,ts}' --quiet --fix",
     "lint:staged": "lint-staged",
     "test": "jest --passWithNoTests --silent --noStackTrace --runInBand",
@@ -15,6 +23,9 @@
     "test:staged": "npm test -- --findRelatedTests",
     "test:ci": "npm test -- --coverage"
   },
+  "files": [
+    "dist"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/asnunes/notion-page-to-html.git"
@@ -33,8 +44,10 @@
   "devDependencies": {
     "@types/jest": "^27.0.2",
     "@types/nock": "^11.1.0",
+    "@types/node": "^18.7.23",
     "@typescript-eslint/eslint-plugin": "^4.31.2",
     "@typescript-eslint/parser": "^4.31.2",
+    "esbuild-plugin-alias": "^0.2.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
@@ -45,6 +58,7 @@
     "nock": "^13.1.3",
     "prettier": "^2.4.1",
     "ts-jest": "^27.0.5",
+    "tsup": "^6.2.3",
     "typescript": "^4.4.3"
   }
 }
